--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,10 @@ body {
   font-family: Arial, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .loader {
   width: 100px;
   aspect-ratio: 1;
